upgpkg: python-pefile 2023.2.7-1: Update to 2023.2.7

--- a/python-pefile/PKGBUILD
+++ b/python-pefile/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Sonic-Y3k <sonic.y3k@googlemail.com>
 
 pkgname=python-pefile
-pkgver=2022.5.30
-pkgrel=2
+pkgver=2023.2.7
+pkgrel=1
 pkgdesc='Python PE parsing module'
 url='https://github.com/erocarrera/pefile'
 arch=('any')
 license=('MIT')
-depends=('python' 'python-future')
+depends=('python')
 makedepends=('python-setuptools' 'python-build' 'python-installer' 'python-wheel')
 source=(https://github.com/erocarrera/pefile/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha512sums=('6f3ade22b5a6697947daa000e9436379874bcd0520344580940a64bbb272e22569e648340bdfc37de9aca948864c6375941e785494dc6c6006e3f878fbda1984')
-b2sums=('6b3191ffeb623fad78f9f8be7b5ad4cee7a44d2569cdf2cb72457746e2464a248d8760e47714ee0e1d5d7f7d1bef961616be432f38949cd87eb97d8bf9346dfb')
+sha512sums=('829f5480a9a0d801d204a186556cf2941e303df6e7d5ea01522f5fe9a5075141431f549ebd18103818580922ff05b563c9f6e756eae683260fdd9d5af72c81e4')
+b2sums=('c4fc4c18aa3517691dc09b91b7477d0a1b1ed0be2f72606697d2840b12d040aa010825ad992e032d258971398677899d44f845bf651c38b8f389cdd55a9aa786')
 
 build() {
   cd pefile-${pkgver}
