upgpkg: sequoia-sq 0.30.0-2
Using cargo test --release alters the built sq binary, so use a different CARGO_TARGET_DIR for the tests.
https://gitlab.com/sequoia-pgp/sequoia-sq/-/issues/96

--- a/sequoia-sq/PKGBUILD
+++ b/sequoia-sq/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: David Runge <dvzrv@archlinux.org>
 
 pkgname=sequoia-sq
-pkgver=0.29.0
-_commit=bc9bc72fd670eda6bba973352b8053d67b1a180a  # refs/tags/v0.29.0
-pkgrel=1
+pkgver=0.30.0
+_commit=2f3f75e8c2117ae2ff118219dc7a118eb8f52b0b  # refs/tags/v0.30.0
+pkgrel=2
 pkgdesc='Command-line frontends for Sequoia'
 url='https://sequoia-pgp.org/'
 arch=('x86_64')
@@ -18,6 +18,7 @@ depends=(
   'gmp'
   'nettle' 'libnettle.so' 'libhogweed.so'
   'openssl'
+  'sqlite'
 )
 makedepends=(
   'git'
@@ -33,15 +34,28 @@ validpgpkeys=(
   8F17777118A33DDA9BA48E62AACB3243630052D9  # Neal H. Walfield <neal@sequoia-pgp.org>
 )
 
+prepare() {
+  cd $pkgname
+  export RUSTUP_TOOLCHAIN=stable
+  cargo fetch --locked --target "$CARCH-unknown-linux-gnu"
+}
+
 build() {
   cd $pkgname
   export CARGO_TARGET_DIR=../target
-  cargo build --release --locked --features 'crypto-nettle compression-bzip2 autocrypt'
+  export RUSTUP_TOOLCHAIN=stable
+  # NOTE: we select specific (default) features, as there are multiple crypto backends
+  cargo build --release --frozen --features 'default'
+
 }
 
 check() {
   cd $pkgname
-  cargo test --release --locked --features 'crypto-nettle compression-bzip2 autocrypt'
+  # NOTE: we use a different target dir, as otherwise cargo test --release alters the sq binary
+  # https://gitlab.com/sequoia-pgp/sequoia-sq/-/issues/96
+  export CARGO_TARGET_DIR=../target-test
+  export RUSTUP_TOOLCHAIN=stable
+  cargo test --release --frozen --features 'default'
 }
 
 package() {
@@ -51,7 +65,9 @@ package() {
   install -Dm 644 target/_sq -t "${pkgdir}/usr/share/zsh/site-functions"
   install -Dm 644 target/sq.fish -t "${pkgdir}/usr/share/fish/vendor_completions.d"
 
-  install -Dm 644 $pkgname/man-sq/*.1 -t "${pkgdir}/usr/share/man/man1"
+  for manpage in target/release/build/$pkgname-*/out/*.1; do
+    install -Dm 644 $manpage -t "${pkgdir}/usr/share/man/man1/"
+  done
 }
 
 # vim: ts=2 sw=2 et:
