--- a/lsd/PKGBUILD
+++ b/lsd/PKGBUILD
@@ -4,13 +4,17 @@
 
 pkgname=lsd
 pkgver=0.23.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Modern ls with a lot of pretty colors and awesome icons'
 url='https://github.com/Peltoche/lsd'
 arch=('x86_64')
 license=('Apache')
-depends=('gcc-libs' 'awesome-terminal-fonts')
+depends=('gcc-libs')
 makedepends=('cargo' 'pandoc')
+optdepends=(
+  'nerd-fonts'
+  'awesome-terminal-fonts'
+)
 source=(https://github.com/Peltoche/lsd/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz)
 sha256sums=('9698919689178cc095f39dcb6a8a41ce32d5a1283e6fe62755e9a861232c307d')
 sha512sums=('20ce3b0bb81f2bb2025025ed9af35ce7fc2089d6bdeb4a55312358fecf8dd15c4665c732a0c5cc8642ecc2c90457ed05587aa8290818429a419a4f05a6c19db6')
