upgpkg: python-rangehttpserver 1.3.3-1: Update to 1.3.3

--- a/python-rangehttpserver/PKGBUILD
+++ b/python-rangehttpserver/PKGBUILD
@@ -2,29 +2,27 @@
 
 _pkgname=RangeHTTPServer
 pkgname=python-rangehttpserver
-pkgver=1.2.0
-pkgrel=9
+pkgver=1.3.3
+pkgrel=1
 pkgdesc='SimpleHTTPServer with support for Range requests'
 url='https://github.com/danvk/RangeHTTPServer/'
 arch=('any')
 license=('Apache')
 depends=('python')
 makedepends=('python' 'python-setuptools')
-checkdepends=('python-nose' 'python-requests')
+checkdepends=('python-pytest' 'python-requests')
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/danvk/RangeHTTPServer//archive/${pkgver}.tar.gz)
-sha256sums=('17aad58bec8ccd95f9d5bc9cff2bf3597d002eff08e1ced558c8756b61467a94')
-sha512sums=('5964687bb3e8524ab3eea0b71eaefe189f795ce73ba438510936480bbdfda3dcfafe97ace66b35b3b235864f71744fe20c8fb90f881628ad67a53162e22b59bb')
+sha256sums=('5232af4db9a87d0ee84b6d242b58c48c874062de74bf723a1205b7fdae1e872f')
+sha512sums=('5d179766640bd408d70f083c9fbd7822cdc14a3205d8134f5e20e3c2e22a9e360d1c458b07b028f5f2242e1aa94e623e3ac0f7453e83beabd67477d0f8c027c3')
 
 build() {
-  (cd ${_pkgname}-${pkgver}
-    python setup.py build
-  )
+  cd ${_pkgname}-${pkgver}
+  python setup.py build
 }
 
 check() {
-  (cd ${_pkgname}-${pkgver}
-    nosetests
-  )
+  cd ${_pkgname}-${pkgver}
+  pytest -v
 }
 
 package() {
