upgpkg: libupnp 1.14.17-1: Upgrade to 1.14.17.

--- a/libupnp/PKGBUILD
+++ b/libupnp/PKGBUILD
@@ -5,7 +5,7 @@
 
 _name=pupnp
 pkgname=libupnp
-pkgver=1.14.16
+pkgver=1.14.17
 pkgrel=1
 pkgdesc='Portable Open Source UPnP Development Kit'
 arch=(x86_64)
@@ -13,10 +13,13 @@ url="https://pupnp.sourceforge.io/"
 license=(BSD)
 depends=(glibc)
 makedepends=(cmake)
-provides=(libixml.so libupnp.so)
+provides=(
+  libixml.so
+  libupnp.so
+)
 source=(https://github.com/$_name/$_name/archive/release-$pkgver/$_name-release-$pkgver.tar.gz)
-sha512sums=('f02d72415ec4891e019724b5774aed2bd470d64ff1f6c179140a3e61bfb34794f0e6069d5f4baf0d8260aae09eab607a61575f02c4f853616180aec7f701abd3')
-b2sums=('f9cebb6f0f5faea07e003f433100d4789e2f59d16a1d1733e1a644ca49ea8fc43b080359b6106c84e4681b6c491ecbbc6373766aaf962d6b97372dfd4abf4bd2')
+sha512sums=('d9af7231687bb694961822a9d3b1e9b04e52142f0245729902b240564579903858e01a5cfe53ff7a8fa77e44e36b840f0c355d2c79aaf0ced2498b4b1822ed6b')
+b2sums=('8bb38dbdff59cf4fd6c222cf1000ecc195f8d33601d8c06476b0a238d6969fe695bcb52f721e4d88a95fa63ef568881e1628935c3b5ba063b72a3b3ee27ded8b')
 
 build() {
   local cmake_options=(
